--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=720px" />
-    <title>DeviceOrientation Event Example</title>
+    <title>DeviceOrientation Event Viewer</title>
     <style>
 body {
   font-size: 16px;
@@ -35,7 +35,7 @@ table th {
     </style>
   </head>
   <body>
-    <h1>DeviceOrientation Event Example</h1>
+    <h1>DeviceOrientation Event Viewer</h1>
     <ul>
       <li><a href="http://www.w3.org/TR/screen-orientation/">The Screen Orientation API - W3C</a></li>
       <li><a href="http://www.w3.org/TR/orientation-event/">DeviceOrientation Event Specification - W3C</a></li>
