--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ table th {
   </head>
   <body>
     <h1>DeviceOrientation Event Viewer</h1>
+    <p><a href="http://github.com/misohena/js_deviceorientation">Source Code</a></p>
     <ul>
       <li><a href="http://www.w3.org/TR/screen-orientation/">The Screen Orientation API - W3C</a></li>
       <li><a href="http://www.w3.org/TR/orientation-event/">DeviceOrientation Event Specification - W3C</a></li>
