Support window.orientation property

--- a/index.html
+++ b/index.html
@@ -300,11 +300,16 @@ var leftTiltTable2 = createPropertyTableWithTimeController(
   ]);
 
 
+function getScreenOrientationAngle()
+{
+  return (screen && screen.orientation && screen.orientation.angle) || window.orientation;
+}
+
 function updateScreenOrientation(ev)
 {
   var screenObj = {
     type: screen && ((screen.orientation && (screen.orientation.type || screen.orientation)) || screen.mozOrientation || screen.msOrientation),
-    angle: screen && screen.orientation && screen.orientation.angle
+    angle: getScreenOrientationAngle()
   };
   screenOriTable.update(screenObj);
 }
@@ -334,17 +339,15 @@ window.addEventListener("compassneedscalibration", updateCompassNeedsCalibration
 window.addEventListener("orientationchange", updateScreenOrientation, false);
 
 
-
-
-if(screen && screen.orientation && typeof(screen.orientation.angle) == "number"){
+if( typeof(getScreenOrientationAngle()) == "number"){
   function toRad(deg){return deg*(Math.PI/180);}
   function toDeg(rad){return rad*(180/Math.PI);}
   function getLeftTiltAngleFromOrientationEvent(orientationEvent){
-    // r = rotz(alpha)*rotx(beta)*roty(gamma)*rotz(-screen.orientation.angle)*colvec[1,0,0]
+    // r = rotz(alpha)*rotx(beta)*roty(gamma)*rotz(-getScreenOrientationAngle())*colvec[1,0,0]
     // tilt = sin^-1(r.z)
     var b = toRad(orientationEvent.beta || 0);
     var c = toRad(orientationEvent.gamma || 0);
-    var d = toRad(-screen.orientation.angle);
+    var d = toRad(-getScreenOrientationAngle());
     var rz = Math.sin(b)*Math.sin(d)-Math.cos(b)*Math.sin(c)*Math.cos(d);
     return toDeg(Math.asin(rz));
   }
@@ -352,7 +355,7 @@ if(screen && screen.orientation && typeof(screen.orientation.angle) == "number")
     var gravityX = (motionEvent.acceleration.x || 0) - (motionEvent.accelerationIncludingGravity.x || 0);
     var gravityY = (motionEvent.acceleration.y || 0) - (motionEvent.accelerationIncludingGravity.y || 0);
     var gravityZ = (motionEvent.acceleration.z || 0) - (motionEvent.accelerationIncludingGravity.z || 0);
-    var screenAngleRev = toRad(-screen.orientation.angle);
+    var screenAngleRev = toRad(-getScreenOrientationAngle());
     var rightX = Math.cos(screenAngleRev);
     var rightY = Math.sin(screenAngleRev);
     var dotGR = rightX * gravityX  + rightY * gravityY;
